--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 python:
   - "3.5"
-script: pip install -r requirements.txt
-script: python test.py
+script:
+  - pip install -r requirements.txt
+  - source coverage_reports.sh
+after_success: coveralls
